--- a/pages/fonts.css
+++ b/pages/fonts.css
@@ -20,7 +20,7 @@
     
     h2 {
     font-family:"Abel",sans-serif;
-    font-size:1.1rem
+    font-size:1rem;
     }
     
     h3 {
@@ -59,7 +59,7 @@
     }
     
     h2 {
-    font-size:.8rem
+    font: size 0.6em;
     }
     
     h3 {
