--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -171,8 +171,8 @@
 	display:none;
 	visibility:hidden;
 	text-transform:uppercase;
-	font-size:.8rem;
-	font-weight:400
+	font-size: clamp(0.7rem, 2.5vw, 1rem);
+	font-weight:400;
 	}
 	
 	@media only screen and (min-width: 360px) {
@@ -217,9 +217,8 @@
 	.header {
 	background:var(--color-white);
 	box-shadow:var(--shadow-medium);
-	transition:all .35s ease-in-out
+	transition:all .35s ease-in-out;
 	}
-	
 	.menu {
 	position:relative;
 	top:0;
@@ -249,9 +248,10 @@
 	display:none;
 	visibility:hidden
 	}
+
 	
 	.menu-name {
-	font-size:1.5rem;
+	font-size:1rem;
 	font-weight:500;
 	margin-bottom:1rem
 	}
