--- a/pages/contact.css
+++ b/pages/contact.css
@@ -88,7 +88,12 @@
   .contact-title h1 {
   font-size:1.5rem
   }
+  .contact-container {
+  padding:0 20px;
+  width:100%;
   }
+}
+  
   
   button {
   overflow:visible
@@ -116,7 +121,8 @@
   border:solid 3px #474544;
   max-width:768px;
   margin:60px auto;
-  position:relative
+  position:relative;
+
   }
   
   form {
@@ -257,7 +263,8 @@
   @media screen and (max-width: 768px) {
   #container {
   margin:20px auto;
-  width:95%
+  width:95%;
+  margin-bottom: 100px;
   }
   }
   
